@@ -21,6 +21,7 @@
 			-->
 			<cpufreq>1</cpufreq>
 			<powerbtn>nothing</powerbtn>
+			<standbymode>poweroff|suspend|hibernate|suspendhybrid</standbymode>
 		</powermanagement>
 		<monitoring>
 			<perfstats>
